resources/quotes/01_quotes_backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
      argocd.argoproj.io/sync-wave: "1"
      console.alpha.openshift.io/overview-app-route: ‘true’
  labels:
    app: quotes-backend
    app.kubernetes.io/part-of: quotes-demo
    app.kubernetes.io/name: quotes-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/instance: quotes-aws-dev
    app.kubernetes.io/environment: development
    app.kubernetes.io/version: "0.0.1"
    app.openshift.io/runtime: quarkus
    app.openshift.io/runtime-version: "3.9.4"
  namespace: quotes
  name: quotes-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: quotes-backend
  template:
    metadata:
      labels:
        app: quotes-backend
      annotations:
        sidecar.opentelemetry.io/inject: "true"
        instrumentation.opentelemetry.io/inject-java: "true"
    spec:
      containers:
        - name: quotes-backend
          image: >-
            quay.io/ilago/quote-backend:latest
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
