resources/quotes/04_quotes-route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
      argocd.argoproj.io/sync-wave: "4"
  name: quotes-backend
  namespace: quotes
  labels:
    app.kubernetes.io/component: route
    app.kubernetes.io/environment: development
    app.kubernetes.io/instance: quotes-aws-dev
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: quotes-backend-route
    app.kubernetes.io/part-of: quotes-demo
spec:
  to:
    kind: Service
    name: quotes-backend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: 8080
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
      argocd.argoproj.io/sync-wave: "4"
  name: quotes-frontend
  namespace: quotes
  labels:
    app.kubernetes.io/component: route
    app.kubernetes.io/environment: development
    app.kubernetes.io/instance: quotes-aws-dev
    app.kubernetes.io/managed-by: argocd
    app.kubernetes.io/name: quotes-frontend-route
    app.kubernetes.io/part-of: quotes-demo
spec:
  to:
    kind: Service
    name: quotes-frontend
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
    destinationCACertificate: ''
  port:
    targetPort: 5173
